Adjustments and additions to display the images on the home page. Fixed obvious errors.

--- a/hipstapic-web/src/main/webapp/index.html
+++ b/hipstapic-web/src/main/webapp/index.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-default navbar-static-top" role="navigation" ng-controller="NavController">
     <div class="container-fluid">
         <ul class="nav navbar-nav">
-            <li><a ui-sref="home" class="app-title">hhhhh</a></li>
+            <li><a ui-sref="home" class="app-title">hipstapic</a></li>
             <li>
                 <input type="text" class="form-control" ng-model="text" wh-enterup="search()" placeholder="Press to search">
             </li>
