--- a/hipstapic-web/src/main/webapp/index.html
+++ b/hipstapic-web/src/main/webapp/index.html
@@ -19,6 +19,7 @@
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/controllers.js" type="text/javascript"></script>
     <script src="js/services.js" type="text/javascript"></script>
+    <script src="js/directives.js" type="text/javascript"></script>
 </head>
 <body ng-app="app">
 <nav class="navbar navbar-default navbar-static-top" role="navigation" ng-controller="NavController">
